IaC/xpipe-cloud/core-v1-fnd-policies/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core-v1-fnd-policies-db
  name: core-v1-fnd-policies-db
  namespace: xpipe-cloud
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: core-v1-fnd-policies-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: core-v1-fnd-policies-db
    spec:
      containers:
      - env:
        - name: MYSQL_MAX_CONNECTIONS
          valueFrom:
            configMapKeyRef:
              key: MYSQL_MAX_CONNECTIONS
              name: core-v1-fnd-policies-db-config
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_ROOT_PASSWORD
              name: core-v1-fnd-policies-db-secret
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: MYSQL_DATABASE
              name: core-v1-fnd-policies-db-secret
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: MYSQL_USER
              name: core-v1-fnd-policies-db-secret
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_PASSWORD
              name: core-v1-fnd-policies-db-secret
        image: mysql:8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - mysqladmin -uroot ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: core-v1-fnd-policies-db
        ports:
        - containerPort: 3306
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -ec
            - set -ex
            - mysql -uroot -e 'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: core-v1-fnd-policies-db-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: core-v1-fnd-policies-db-volume
        persistentVolumeClaim:
          claimName: core-v1-fnd-policies-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: core-v1-fnd-policies-db
  name: core-v1-fnd-policies-db
  namespace: xpipe-cloud
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: core-v1-fnd-policies-db
  sessionAffinity: None
  type: ClusterIP
---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  labels:
#    app: core-v1-fnd-policies-db
#  name: core-v1-fnd-policies-db
#  namespace: example-cms
#provisioner: rancher.io/local-path
#spec:
# accessModes:
#  - ReadWriteOnce
# resources:
#  requests:
#   storage: 1Gi
# storageClassName: default
