IaC/xpipe-cloud/core-v1-fnd-policies/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: core-v1-fnd-policies
  name: core-v1-fnd-policies
  namespace: xpipe-cloud
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: core-v1-fnd-policies
  sessionAffinity: None
  type: ClusterIP
