IaC/xpipe-cloud/core-v1-fnd-policies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-v1-fnd-policies
  namespace: xpipe-cloud
  labels:
    app: core-v1-fnd-policies
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: policies-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: core-v1-fnd-policies
              port:
                number: 8080
  tls:
  - hosts:
    - policies-xpipe.sindria.org
    secretName: tls-sindriaorg
